workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/public_resultadointegracao__x.object-meta.xml
<CustomObject>
    <description>public$resultadointegracao</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$resultadointegracao</externalName>
    <label>public$resultadointegracao</label>
    <pluralLabel>public$resultadointegracao</pluralLabel>
</CustomObject>