workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/apolice__c.field-meta.xml
<CustomField>
    <fullName>apolice__c</fullName>
    <description>apolice</description>
    <externalDeveloperName>apolice</externalDeveloperName>
    <label>apolice</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>