workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/area__c.field-meta.xml
<CustomField>
    <fullName>area__c</fullName>
    <description>area</description>
    <externalDeveloperName>area</externalDeveloperName>
    <label>area</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>