workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/chave__c.field-meta.xml
<CustomField>
    <fullName>chave__c</fullName>
    <description>chave</description>
    <externalDeveloperName>chave</externalDeveloperName>
    <label>chave</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>