workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/controle__c.field-meta.xml
<CustomField>
    <fullName>controle__c</fullName>
    <description>controle</description>
    <externalDeveloperName>controle</externalDeveloperName>
    <label>controle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>