workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/dataintegracao__c.field-meta.xml
<CustomField>
    <fullName>dataintegracao__c</fullName>
    <description>dataintegracao</description>
    <externalDeveloperName>dataintegracao</externalDeveloperName>
    <label>dataintegracao</label>
    <type>Date</type>
</CustomField>