workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <description>endpoint</description>
    <externalDeveloperName>endpoint</externalDeveloperName>
    <label>endpoint</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>