workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/lote__c.field-meta.xml
<CustomField>
    <fullName>lote__c</fullName>
    <description>lote</description>
    <externalDeveloperName>lote</externalDeveloperName>
    <label>lote</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>