workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/metodo__c.field-meta.xml
<CustomField>
    <fullName>metodo__c</fullName>
    <description>metodo</description>
    <externalDeveloperName>metodo</externalDeveloperName>
    <label>metodo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>