workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/numeroproposta__c.field-meta.xml
<CustomField>
    <fullName>numeroproposta__c</fullName>
    <description>numeroproposta</description>
    <externalDeveloperName>numeroproposta</externalDeveloperName>
    <label>numeroproposta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>