workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/origemproposta__c.field-meta.xml
<CustomField>
    <fullName>origemproposta__c</fullName>
    <description>origemproposta</description>
    <externalDeveloperName>origemproposta</externalDeveloperName>
    <label>origemproposta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>