workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/parceiro__c.field-meta.xml
<CustomField>
    <fullName>parceiro__c</fullName>
    <description>parceiro</description>
    <externalDeveloperName>parceiro</externalDeveloperName>
    <label>parceiro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>