workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/payloadentrada__c.field-meta.xml
<CustomField>
    <fullName>payloadentrada__c</fullName>
    <description>payloadentrada</description>
    <externalDeveloperName>payloadentrada</externalDeveloperName>
    <label>payloadentrada</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>