workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/payloaderro__c.field-meta.xml
<CustomField>
    <fullName>payloaderro__c</fullName>
    <description>payloaderro</description>
    <externalDeveloperName>payloaderro</externalDeveloperName>
    <label>payloaderro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>