workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/sinistro__c.field-meta.xml
<CustomField>
    <fullName>sinistro__c</fullName>
    <description>sinistro</description>
    <externalDeveloperName>sinistro</externalDeveloperName>
    <label>sinistro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>