workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/sucursal__c.field-meta.xml
<CustomField>
    <fullName>sucursal__c</fullName>
    <description>sucursal</description>
    <externalDeveloperName>sucursal</externalDeveloperName>
    <label>sucursal</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>