workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/tipointegracao__c.field-meta.xml
<CustomField>
    <fullName>tipointegracao__c</fullName>
    <description>tipointegracao</description>
    <externalDeveloperName>tipointegracao</externalDeveloperName>
    <label>tipointegracao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>