workspace-sf/force-app/main/default/objects/public_resultadointegracao__x/fields/tipoobjeto__c.field-meta.xml
<CustomField>
    <fullName>tipoobjeto__c</fullName>
    <description>tipoobjeto</description>
    <externalDeveloperName>tipoobjeto</externalDeveloperName>
    <label>tipoobjeto</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>